--- a/css/style.css
+++ b/css/style.css
@@ -3437,7 +3437,7 @@ p {
     }
 
     .timeline::before {
-        left: 10px;
+        left: 16px;
     }
 
     .timeline-marker {
